nlb_test/hello_world_deploy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - host: hello-world.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service  # Name of your NodePort service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
    - name: hello-world
      image: busybox
      command: ["sh", "-c", "echo Hello World! && sleep 3600"]
